change link paths

--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
             <input class="btn btn-primary" type="file">
             <br />
             Choose a topic<br>
-            Myeloma<input name="chooseTopic" type="radio" value="/input/myeloma.txt"> <br>
-            Test Input<input name="chooseTopic" type="radio" value="/input/test_input.txt"> <br>
-            Cart<input name="chooseTopic" type="radio" value="/input/cart.cart"> <br>
-            Macbook Repair<input name="chooseTopic" type="radio" value="/input/macbookrepair.txt"> <br>
-            Visa<input name="chooseTopic" type="radio" value="/input/visa.txt"> <br>
-            Housing<input name="chooseTopic" type="radio" value="/input/housing.txt"> <br>
-            Social Security<input name="chooseTopic" type="radio" value="/input/collect_social.txt"> <br>
+            Myeloma<input name="chooseTopic" type="radio" value="input/myeloma.txt"> <br>
+            Test Input<input name="chooseTopic" type="radio" value="input/test_input.txt"> <br>
+            Cart<input name="chooseTopic" type="radio" value="input/cart.cart"> <br>
+            Macbook Repair<input name="chooseTopic" type="radio" value="input/macbookrepair.txt"> <br>
+            Visa<input name="chooseTopic" type="radio" value="input/visa.txt"> <br>
+            Housing<input name="chooseTopic" type="radio" value="input/housing.txt"> <br>
+            Social Security<input name="chooseTopic" type="radio" value="input/collect_social.txt"> <br>
             <br />
             <button class="btn btn-primary" onclick="input()">Submit</button>
         </div>
     </div>
 
-    <script src="/static/MindFusion.Common.js" type="text/javascript"></script>
-    <script src="/static/MindFusion.Diagramming.js" type="text/javascript"></script>
-    <script src="/static/homepage.js" type="text/javascript"></script>
+    <script src="static/MindFusion.Common.js" type="text/javascript"></script>
+    <script src="static/MindFusion.Diagramming.js" type="text/javascript"></script>
+    <script src="static/homepage.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
     <!-- <script src="data.js" type="text/javascript"></script> -->
 </body>
